correct use of correlation id